# features-from-dlc

./: README.md  environment.yml  pyproject.toml
.github/workflows/: python-publish.yml
configs/: config_plot.toml  openfield.py
examples/: ffd_quantify.py
features_from_dlc/: __init__.py  features_from_dlc.py
features_from_dlc/configs/: config_plot.toml  openfield.py
notebooks/: ffd_quantify_openfield.ipynb  ffd_raster_means.ipynb
resources/: settings.toml
scripts/: ffd_quantify.py  ffmpeg-reencode.bat  ffmpeg-rotate90.bat  video_cutter.py
